--- a/index.html
+++ b/index.html
@@ -194,13 +194,13 @@
             <div class="column__making-coffee">
                 <p class="fonts_logo_making">About</p>
                 <h2 class="h2_master_coffee_making">MASTER COFFEE MAKING</h2>
-                <p>At our school, you'll learn all coffee secrets.</p>
-                <p>Coffee Lab School gives a real-life experience of a coffee shop with an internship.</p>
+                <p class="p_making__font">At our school, you'll learn all coffee secrets.</p>
+                <p class="p_making_coffee_fonts">Coffee Lab School gives a real-life experience of a coffee shop with an internship.</p>
             </div>
             <div class="column_making-learn-more">
                 <h3 class="h3_master_coffee_making">PROFESSIONAL COUSES ARE NOW AVAILABLE FOR ALL COFFEE FANS IN NEW YORK</h3>
                 <hr class="hr_making_team">
-                <p>Coffee Lab School is an educational playground for people who cast their lot with coffee. If you own
+                <p class="p_making_coffee_fonts">Coffee Lab School is an educational playground for people who cast their lot with coffee. If you own
                     a coffee shop, work as a barista, or you’re just a coffee fan, it is a place where you can learn
                     even more about this hot and energizing drink</p>
                 <a href="#pricing" class="btn_making_learn_more">Learn More</a>
